--- a/Homeworks/HW_1/HW_1_5/style.css
+++ b/Homeworks/HW_1/HW_1_5/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url("\images/Gotham-City.jpg");
+    background: url("images/Gotham-City.jpg");
     background-size: cover;
     background-attachment: fixed;
 }
