--- a/rest.css
+++ b/rest.css
@@ -6,6 +6,7 @@
 
     box-sizing: border-box;
 
+
 }
 
  
@@ -20,7 +21,7 @@ html, body {
 
 a {
 
-    text-decoration: none;
+    text-decoration: none !important;
 
     color: inherit;
 
